--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ cache:
     - $HOME/.cache/pip
 
 python:
- - "2.6"
- - "2.7"
+ - "3.2"
+ - "3.3"
+ - "3.4"
+ - "3.5"
 
 env:
- - DJANGO="Django>=1.3,<1.4"
- - DJANGO="Django>=1.4,<1.5"
  - DJANGO="Django>=1.5,<1.6"
  - DJANGO="Django>=1.6,<1.7"
  - DJANGO="Django>=1.7,<1.8"
@@ -26,10 +26,20 @@ script: "./runtests.sh"
 matrix:
   exclude:
 
-    - python: "2.6"
+    - python: "3.5"
+      env: DJANGO="Django>=1.5,<1.6"
+    - python: "3.5"
+      env: DJANGO="Django>=1.6,<1.7"
+    - python: "3.5"
       env: DJANGO="Django>=1.7,<1.8"
-    - python: "2.6"
-      env: DJANGO="Django>=1.8,<1.8.99"
-    - python: "2.6"
+
+    - python: "3.4"
+      env: DJANGO="Django>=1.5,<1.6"
+    - python: "3.4"
+      env: DJANGO="Django>=1.6,<1.7"
+
+    - python: "3.3"
       env: DJANGO="--pre Django<1.10"
 
+    - python: "3.2"
+      env: DJANGO="--pre Django<1.10"
