--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ env:
  - DJANGO="Django>=1.5,<1.6"
  - DJANGO="Django>=1.6,<1.7"
  - DJANGO="Django>=1.7,<1.8"
- - DJANGO="Django>=1.8,<1.8.99"
- - DJANGO="--pre Django<1.10"
+ - DJANGO="Django>=1.8,<1.9"
+ - DJANGO="Django>=1.9,<1.10"
 
 install:
  - pip install $DJANGO
@@ -39,7 +39,7 @@ matrix:
       env: DJANGO="Django>=1.6,<1.7"
 
     - python: "3.3"
-      env: DJANGO="--pre Django<1.10"
+      env: DJANGO="Django>=1.9,<1.10"
 
     - python: "3.2"
-      env: DJANGO="--pre Django<1.10"
+      env: DJANGO="Django>=1.9,<1.10"
