--- a/.travis.yml
+++ b/.travis.yml
@@ -4,32 +4,20 @@ cache:
   directories:
     - $HOME/.cache/pip
 
-python:
- - "2.6"
- - "2.7"
+python: 2.7
 
 env:
- - DJANGO="Django>=1.3,<1.4"
  - DJANGO="Django>=1.4,<1.5"
  - DJANGO="Django>=1.5,<1.6"
  - DJANGO="Django>=1.6,<1.7"
  - DJANGO="Django>=1.7,<1.8"
  - DJANGO="Django>=1.8,<1.9"
  - DJANGO="Django>=1.9,<1.10"
+ - DJANGO="Django>=1.10,<1.11"
+ - DJANGO="Django>=1.11,<2"
 
 install:
  - pip install $DJANGO
- - pip install -e .
+ - pip install -e .[dev]
 
 script: "./runtests.sh"
-
-matrix:
-  exclude:
-
-    - python: "2.6"
-      env: DJANGO="Django>=1.7,<1.8"
-    - python: "2.6"
-      env: DJANGO="Django>=1.8,<1.9"
-    - python: "2.6"
-      env: DJANGO="Django>=1.9,<1.10"
-
