--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-adv-cache-tag
-version = 0.3.1.dev
+version = 0.4
 author = Stephane "Twidi" Angel
 author_email = s.angel@twidi.com
 url = https://github.com/twidi/django-adv-cache-tag
