--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-adv-cache-tag
-version = 1.1.1.dev0
+version = 1.1.1
 author = Stephane "Twidi" Angel
 author_email = s.angel@twidi.com
 url = https://github.com/twidi/django-adv-cache-tag
