--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ classifiers =
     Framework :: Django :: 1.10
     Framework :: Django :: 1.11
     Framework :: Django :: 2.0
+    Framework :: Django :: 2.1
 
 [options]
 zip_safe = True
