--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
  - DJANGO="Django>=1.10,<1.11"
  - DJANGO="Django>=1.11,<2.0"
  - DJANGO="Django>=2.0,<2.1"
+ - DJANGO="Django>=2.1,<2.2"
 
 install:
  - pip install $DJANGO
@@ -25,6 +26,9 @@ script: "./runtests.sh"
 
 matrix:
   exclude:
+
+    - python: "3.4"
+      env: DJANGO="Django>=2.1,<2.2"
 
     - python: "3.5"
       env: DJANGO="Django>=1.7,<1.8"
