--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 sudo: false
+dist: xenial
 cache:
   directories:
     - $HOME/.cache/pip
@@ -8,6 +9,7 @@ python:
  - "3.4"
  - "3.5"
  - "3.6"
+ - "3.7"
 
 env:
  - DJANGO="Django>=1.7,<1.8"
@@ -44,3 +46,18 @@ matrix:
 
     - python: "3.6"
       env: DJANGO="Django>=1.10,<1.11"
+
+    - python: "3.7"
+      env: DJANGO="Django>=1.7,<1.8"
+
+    - python: "3.7"
+      env: DJANGO="Django>=1.8,<1.9"
+
+    - python: "3.7"
+      env: DJANGO="Django>=1.9,<1.10"
+
+    - python: "3.7"
+      env: DJANGO="Django>=1.10,<1.11"
+
+    - python: "3.7"
+      env: DJANGO="Django>=1.11,<2.0"
