--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
  - "3.5"
  - "3.6"
  - "3.7"
+ - "3.8"
 
 env:
  - DJANGO="Django>=1.7,<1.8"
@@ -19,6 +20,8 @@ env:
  - DJANGO="Django>=1.11,<2.0"
  - DJANGO="Django>=2.0,<2.1"
  - DJANGO="Django>=2.1,<2.2"
+ - DJANGO="Django>=2.2,<3.0"
+ - DJANGO="Django>=3.0,<3.1"
 
 install:
  - pip install $DJANGO
@@ -32,8 +35,17 @@ matrix:
     - python: "3.4"
       env: DJANGO="Django>=2.1,<2.2"
 
+    - python: "3.4"
+      env: DJANGO="Django>=2.2,<3.0"
+
+    - python: "3.4"
+      env: DJANGO="Django>=3.0,<3.1"
+
     - python: "3.5"
       env: DJANGO="Django>=1.7,<1.8"
+
+    - python: "3.5"
+      env: DJANGO="Django>=3.0,<3.1"
 
     - python: "3.6"
       env: DJANGO="Django>=1.7,<1.8"
@@ -61,3 +73,24 @@ matrix:
 
     - python: "3.7"
       env: DJANGO="Django>=1.11,<2.0"
+
+    - python: "3.8"
+      env: DJANGO="Django>=1.7,<1.8"
+
+    - python: "3.8"
+      env: DJANGO="Django>=1.8,<1.9"
+
+    - python: "3.8"
+      env: DJANGO="Django>=1.9,<1.10"
+
+    - python: "3.8"
+      env: DJANGO="Django>=1.10,<1.11"
+
+    - python: "3.8"
+      env: DJANGO="Django>=1.11,<2.0"
+
+    - python: "3.8"
+      env: DJANGO="Django>=2.0,<2.1"
+
+    - python: "3.8"
+      env: DJANGO="Django>=2.1,<2.2"
