--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-adv-cache-tag
-version = 1.1.2
+version = 1.1.3
 author = Stephane "Twidi" Angel
 author_email = s.angel@twidi.com
 url = https://github.com/twidi/django-adv-cache-tag
@@ -24,6 +24,7 @@ classifiers =
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Framework :: Django
     Framework :: Django :: 1.7
     Framework :: Django :: 1.8
@@ -32,6 +33,8 @@ classifiers =
     Framework :: Django :: 1.11
     Framework :: Django :: 2.0
     Framework :: Django :: 2.1
+    Framework :: Django :: 2.2
+    Framework :: Django :: 3.0
 
 [options]
 zip_safe = True
